Changed package name, fixing single flow optimization, cost function, input file parsing, implementing input generator, adding configuration example

--- a/generator/pom.xml
+++ b/generator/pom.xml
@@ -8,7 +8,7 @@
         <version>1.0</version>
     </parent>
 
-    <artifactId>single-flow-optimization</artifactId>
+    <artifactId>generator</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
@@ -34,8 +34,7 @@
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
-                                        <Main-Class>io.vertx.core.Launcher</Main-Class>
-                                        <Main-Verticle>ru.pokrasko.pgd.singleflow.SingleFlowOptimizer</Main-Verticle>
+                                        <Main-Class>ru.pokrasko.pgd.generator.Generator</Main-Class>
                                     </manifestEntries>
                                 </transformer>
                             </transformers>
