--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 
     <modules>
         <module>common</module>
+        <module>generator</module>
         <module>single-flow-optimization</module>
     </modules>
 
