--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>common</module>
         <module>generator</module>
         <module>single-flow-optimization</module>
+        <module>parallel</module>
     </modules>
 
     <properties>
