--- a/common/pom.xml
+++ b/common/pom.xml
@@ -3,11 +3,23 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>ru.pokrasko.demo</groupId>
-        <artifactId>parallel-gradient-descent</artifactId>
+        <groupId>ru.pokrasko.pgd</groupId>
+        <artifactId>root</artifactId>
         <version>1.0</version>
     </parent>
 
     <artifactId>common</artifactId>
     <packaging>jar</packaging>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-install-plugin</artifactId>
+                <version>2.5.2</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
