--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ru.pokrasko.demo</groupId>
-    <artifactId>parallel-gradient-descent</artifactId>
+    <groupId>ru.pokrasko.pgd</groupId>
+    <artifactId>root</artifactId>
     <version>1.0</version>
     <packaging>pom</packaging>
 
