--- a/single-flow/pom.xml
+++ b/single-flow/pom.xml
@@ -8,7 +8,7 @@
         <version>1.0</version>
     </parent>
 
-    <artifactId>single-flow-optimization</artifactId>
+    <artifactId>single-flow</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
